# oasiscap

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  generate.rs  parse.rs
fixtures/: google-PAAQ-4-mg5a94.xml  ipaws-5e6dd964023f1930ef638846.xml  ipaws-5e6dd9de023f1930ef6548d9.xml  ipaws-5e6ddbad023f1930ef6c1a5a.xml  ipaws-5e7e0fc5023f1930efcf3deb.xml  ipaws-5ea321f39fc226a7b44b6874.xml  nws-5c2cf27b1f56885d61654dc47fa411d5.xml  v1dot0_appendix_adot1.xml  v1dot0_appendix_adot2.xml  v1dot0_appendix_adot3.xml  v1dot0_appendix_adot4.xml  v1dot1_appendix_adot1.xml  v1dot1_appendix_adot2.xml  v1dot1_appendix_adot3.xml  v1dot1_appendix_adot4.xml  v1dot2_appendix_adot1.xml  v1dot2_appendix_adot2.xml  v1dot2_appendix_adot3.xml  v1dot2_appendix_adot4.xml
src/: alert.rs  datetime.rs  delimited_items.rs  digest.rs  embedded_data.rs  geo.rs  id.rs  language.rs  lib.rs  map.rs  protobuf.rs  references.rs  url.rs  v1dot0.rs  v1dot1.rs  v1dot2.rs
src/protobuf/: alert_conversion.rs  area_conversion.rs  category.rs  certainty.rs  delimited_items.rs  geo.rs  info_conversion.rs  map.rs  message_type.rs  prost.rs  references.rs  resource_conversion.rs  response_type.rs  scope.rs  severity.rs  status.rs  urgency.rs
src/v1dot0/: altitude.rs  category.rs  certainty.rs  circle.rs  id.rs  language.rs  map.rs  message_type.rs  point.rs  polygon.rs  references.rs  scope.rs  severity.rs  status.rs  tests.rs  urgency.rs
src/v1dot1/: category.rs  certainty.rs  map.rs  response_type.rs  status.rs  tests.rs
src/v1dot2/: map.rs  response_type.rs  (+1 more)
tests/: fixtures.rs  ipaws_archive.rs
