[package]
name = "oasiscap"
version = "0.1.0"
edition = "2021"
description = "Types for the OASIS Common Alerting Protocol (CAP)"
repository = "https://github.com/willglynn/oasiscap"
license = "MIT OR Apache-2.0"
keywords = ["cap", "xml", "alerts", "oasis", "public-safety"]
categories = ["parser-implementations"]
include = ["Cargo.toml", "README.md", "src", "benches"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }
xml_serde = "1.2.3"
base64ct = "1.3"

[dev-dependencies]
pretty_env_logger = "0.4.0"
serde_test = "1.0"
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "generate"
harness = false
